# faces-PyJs

./: LICENCE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
faces/: __init__.py
